Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11020

CHECK failure in AttachStdoutStderrLocked

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • None
    • Impala 4.1.0
    • None
    • None

    Description

      Stack trace is

      #0  0x00007fa1b4fb51f7 in raise () from /lib64/libc.so.6
      #1  0x00007fa1b4fb68e8 in abort () from /lib64/libc.so.6
      #2  0x00000000056d5e84 in google::DumpStackTraceAndExit() ()
      #3  0x00000000056cb2bd in google::LogMessage::Fail() ()
      #4  0x00000000056ccb6d in google::LogMessage::SendToLog() ()
      #5  0x00000000056cac1b in google::LogMessage::Flush() ()
      #6  0x00000000056ce7d9 in google::LogMessageFatal::~LogMessageFatal() ()
      #7  0x0000000001f8e6b8 in AttachStdoutStderrLocked () at /data/jenkins/workspace/impala-asf-master-exhaustive/repos/Impala/be/src/common/logging.cc:113
      #8  0x0000000001f8ef2d in impala::AttachStdoutStderr () at /data/jenkins/workspace/impala-asf-master-exhaustive/repos/Impala/be/src/common/logging.cc:203
      #9  0x0000000001f8703f in LogMaintenanceThread () at /data/jenkins/workspace/impala-asf-master-exhaustive/repos/Impala/be/src/common/init.cc:179
      #10 0x0000000001f8d925 in boost::detail::function::void_function_invoker0<void (*)(), void>::invoke (function_ptr=...) at /data/jenkins/workspace/impala-asf-master-exhaustive/Impala-Toolchain/toolchain-packages-gcc7.5.0/boost-1.74.0-p1/include/boost/function/function_template.hpp:117
      #11 0x00000000022a9eb4 in boost::function0<void>::operator() (this=0x7fa1b2c64b20) at /data/jenkins/workspace/impala-asf-master-exhaustive/Impala-Toolchain/toolchain-packages-gcc7.5.0/boost-1.74.0-p1/include/boost/function/function_template.hpp:763
      #12 0x0000000002a7557d in impala::Thread::SuperviseThread(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*) (name=..., category=..., functor=..., parent_thread_info=0x0, thread_started=0x7fffbeeac2e0) at /data/jenkins/workspace/impala-asf-master-exhaustive/repos/Impala/be/src/util/thread.cc:360
      #13 0x0000000002a7decd in boost::_bi::list5<boost::_bi::value<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::ThreadDebugInfo*>, boost::_bi::value<impala::Promise<long, (impala::PromiseMode)0>*> >::operator()<void (*)(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*), boost::_bi::list0>(boost::_bi::type<void>, void (*&)(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*), boost::_bi::list0&, int) (this=0x9f4c4c0, f=@0x9f4c4b8: 0x2a7523a <impala::Thread::SuperviseThread(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*)>, a=...) at /data/jenkins/workspace/impala-asf-master-exhaustive/Impala-Toolchain/toolchain-packages-gcc7.5.0/boost-1.74.0-p1/include/boost/bind/bind.hpp:531
      #14 0x0000000002a7ddf1 in boost::_bi::bind_t<void, void (*)(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*), boost::_bi::list5<boost::_bi::value<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::ThreadDebugInfo*>, boost::_bi::value<impala::Promise<long, (impala::PromiseMode)0>*> > >::operator()() (this=0x9f4c4b8) at /data/jenkins/workspace/impala-asf-master-exhaustive/Impala-Toolchain/toolchain-packages-gcc7.5.0/boost-1.74.0-p1/include/boost/bind/bind.hpp:1294
      #15 0x0000000002a7ddb2 in boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*), boost::_bi::list5<boost::_bi::value<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::ThreadDebugInfo*>, boost::_bi::value<impala::Promise<long, (impala::PromiseMode)0>*> > > >::run() (this=0x9f4c380) at /data/jenkins/workspace/impala-asf-master-exhaustive/Impala-Toolchain/toolchain-packages-gcc7.5.0/boost-1.74.0-p1/include/boost/thread/detail/thread.hpp:120
      #16 0x0000000004374bd1 in thread_proxy ()
      #17 0x00007fa1b8649e25 in start_thread () from /lib64/libpthread.so.0
      #18 0x00007fa1b507834d in clone () from /lib64/libc.so.6
      

      This looks like new code from IMPALA-5256.

      Attachments

        Activity

          People

            rizaon Riza Suminto
            asherman Andrew Sherman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: