IMPALA-11020: Reattach STDOUT/STDERR independently.

IMPALA-5256 made an incorrect assumption that glog will rotate both INFO
and ERROR logs at the same time. A race condition can happen between
glog's log rotation and symlink resolutions in AttachStdoutStderrLocked
because impala does not hold glog's log_mutex.

This patch fixes the issue by replacing the DCHECK with a log, warning
if only one symlink has changed. We then reattach the stream only for
the one pointing to a new file. The next AttachStdoutStderr call after
logbufsecs will handle redirection for the slower log rotation. This
patch also adds explicit log flush after logging statements that intent
to initialize a new log file.

Testing:
- Pass the exhaustive test.

Change-Id: I35bbed631773bf7a4d55b2b77df1a093f34dedc5
Reviewed-on: http://gerrit.cloudera.org:8080/18031
Reviewed-by: Joe McDonnell <joemcdonnell@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>